v2.1.4/_sources/plugins/device_interface_by_ip_info_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.device_interface_by_ip_info module -- Information module for Device Interface By Ip Info
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.1.4).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.device_interface_by_ip_info`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 3.1.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- This module represents an alias of the module device\_interface\_by\_ip\_v1\_info

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 2.3.7.9
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-_api_port:

      .. rst-class:: ansible-option-title

      **_api_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_api_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-_debug:

      .. rst-class:: ansible-option-title

      **_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco CATALYST Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_host"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-_host:

      .. rst-class:: ansible-option-title

      **_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_password"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-_password:

      .. rst-class:: ansible-option-title

      **_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-_username:
      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-user:

      .. rst-class:: ansible-option-title

      **_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-_verify:

      .. rst-class:: ansible-option-title

      **_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_version"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-_version:

      .. rst-class:: ansible-option-title

      **_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco CATALYST Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ipAddress"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-ipaddress:

      .. rst-class:: ansible-option-title

      **ipAddress**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ipAddress" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      IpAddress path parameter. IP address of the interface.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco CATALYST Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are devices.Devices.get\_interface\_by\_ip\_v1,
   - Paths used are get /dna/intent/api/v1/interface/ip-address/{ipAddress},
   - It should be noted that this module is an alias of device\_interface\_by\_ip\_v1\_info
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco CATALYST SDK
   - The parameters starting with catalystCenter\_ are used by the Cisco CATALYST Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Cisco DNA Center documentation for Devices GetInterfaceByIPV1 <https://developer.cisco.com/docs/dna-center/#!get-interface-by-ip>`_
       Complete reference of the GetInterfaceByIPV1 API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get Device Interface By Ip Info by id
      cisco.catalystcenter.device_interface_by_ip_info:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        headers: "{{my_headers | from_json}}"
        ipAddress: string
      register: result




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-catalystcenter_response"></div>

      .. _ansible_collections.cisco.catalystcenter.device_interface_by_ip_info_module__return-catalystcenter_response:

      .. rst-class:: ansible-option-title

      **catalystcenter_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-catalystcenter_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco DNAC Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": [{"addresses": [{"address": {"ipAddress": {"address": "string"}, "ipMask": {"address": "string"}, "isInverseMask": true}, "type": "string"}], "adminStatus": "string", "className": "string", "description": "string", "deviceId": "string", "duplex": "string", "id": "string", "ifIndex": "string", "instanceTenantId": "string", "instanceUuid": "string", "interfaceType": "string", "ipv4Address": "string", "ipv4Mask": "string", "isisSupport": "string", "lastIncomingPacketTime": 0, "lastOutgoingPacketTime": 0, "lastUpdated": "string", "macAddress": "string", "mappedPhysicalInterfaceId": "string", "mappedPhysicalInterfaceName": "string", "mediaType": "string", "mtu": "string", "name": "string", "nativeVlanId": "string", "ospfSupport": "string", "pid": "string", "portMode": "string", "portName": "string", "portType": "string", "serialNo": "string", "series": "string", "speed": "string", "status": "string", "vlanId": "string", "voiceVlan": "string"}], "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

